--- a/css/basestyle.css
+++ b/css/basestyle.css
@@ -408,3 +408,9 @@ label {
 	font-size: 12px;
 	font-family: Arial, Helvetica, sans-serif;
 }
+.right-side-lnk {
+	font-size: 12px;
+	font-family: Arial, Helvetica, sans-serif;
+	color:#000;
+	
+}
